Change Checkbox docked vs engaged chargepad to dropdown Add counter for how many robots on alliance chargepad Need to fix alignment of mobility auto and docked or engaged dropdown

--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,8 @@ div {
 
 .subtitle, .title, 
 .cube, .cone, 
-.teleopCheckbox, .autoCheckbox {
+.teleopCheckbox, .autoCheckbox, .subtitleautoDropdown,
+ .subtitleteleDropdown  {
   color: rgb(255, 217, 0);
   padding-top: 10px;
 }
@@ -104,6 +105,17 @@ div {
   padding-bottom: 0%;
 }
 
+
+.autoCheckbox {
+  align-items: center;
+  display: inline-block;
+  padding-right: 10px;
+}
+.widgetautoDropdown {
+  margin: 20px;
+  }
+
+
 .value {
   padding: 10px;
   color: rgb(255, 255, 255);
@@ -131,9 +143,7 @@ div {
   border-radius: calc(100px);
   float: center;
 }
-.style1 {
-  height: 1000;
-}
+
 
 
 .export, .clear-localstorage {
@@ -216,3 +226,8 @@ div {
   text-indent: 4%;
 
 }
+.subtitleautoDropdown, .subtitleautoCheckbox {
+  align-items: center;
+  display: inherit;
+}
+
